# blanc-all

./: .flake8  README.md  pyproject.toml
app/: block.py  commands.py  gui.py  main.py  utils.py
tests/: conftest.py  test_gui.py  utils.py
tests/data/: fake_hosts
tests/test_block/: test_blocking_manager.py  test_is_valid_site.py
tests/test_utils/: test_extract_blocked_site.py  test_format_quote.py  test_get_quote.py  test_is_valid_site.py
