[tool.poetry]
name = "blanc-all"
version = "0.1.0"
description = "Blocks access to certain sites."
authors = ["mercea.abrudan <mercea.abrudan@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
